Portuguese/Brazil translations added

--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -74,7 +74,8 @@
     "GTC":
     "TCU",
 
-    "Here you can add your own agreement type by specifying the following properties":
+    "Here you can add your own agreement type by specifying the following
+properties":
     "",
 
     "I accept the @s1general terms and conditions@s2":
@@ -86,26 +87,39 @@
     "I have read and understood the @s1legal disclaimer@s2":
     "Eu li e entendi o @s1termo legal@s2",
 
-    "If the file for the user language doesn't exist, then the file for the default language will be used":
-    "Se o arquivo para o idioma do usuário não existir, o arquivo do idioma padrão será utilizado",
+    "If the file for the user language doesn't exist, then the file for the
+default language will be used":
+    "Se o arquivo para o idioma do usuário não existir, o arquivo do idioma
+padrão será utilizado",
 
-    "If the text file is bigger than this size, then its contents won't appear completely in the dialog, so, adjust the size till it is adequate to your needs":
-    "Se o arquivo texto for maior que este tamanho, seu conteúdo não será mostrado por completo na tela, portanto ajuste este valor de acordo com suas necessidades",
+    "If the text file is bigger than this size, then its contents won't appear
+completely in the dialog, so, adjust the size till it is adequate to your
+needs":
+    "Se o arquivo texto for maior que este tamanho, seu conteúdo não será
+mostrado por completo na tela, portanto ajuste este valor de acordo com suas
+necessidades",
 
-    "If true, it indicates that the user is a returning visitor, who already accepted the disclaimer":
-    "Se verdadeiros, indica que o usuário já visitou o site e já aceitou o termo",
+    "If true, it indicates that the user is a returning visitor, who already
+accepted the disclaimer":
+    "Se verdadeiros, indica que o usuário já visitou o site e já aceitou o
+termo",
 
-    "If you want to modify this limit, do it at your own risk by changing the value of the parameter: maxAppTxtFileSize inside the config.php file":
-    "Se deseja alterar este limite, o faça por seu próprio risco alterando o valor do parámetro: maxAppTxtFileSize dentro do arquivo config.php",
+    "If you want to modify this limit, do it at your own risk by changing the
+value of the parameter: maxAppTxtFileSize inside the config.php file":
+    "Se deseja alterar este limite, o faça por seu próprio risco alterando o
+valor do parámetro: maxAppTxtFileSize dentro do arquivo config.php",
 
     "It will be used for the title of text dialogs":
     "",
 
-    "In case that the file for the default language doesn't exist, then the user will see an error message when trying to read the text":
-    "No caso do arquivo de idioma padrão não existir, o usuário irá visualizar uma mensagem de erro quando tentar ler o texto",
+    "In case that the file for the default language doesn't exist, then the user
+will see an error message when trying to read the text":
+    "No caso do arquivo de idioma padrão não existir, o usuário irá visualizar
+uma mensagem de erro quando tentar ler o texto",
 
     "It can be a two character code, ie: %s or a five character code, ie: %s":
-    "Pode ser um código de dois caracteres, por exemplo: %s ou um código de 5 caracteres, por exemplo: %s",
+    "Pode ser um código de dois caracteres, por exemplo: %s ou um código de 5
+caracteres, por exemplo: %s",
 
     "Legal disclaimer":
     "Termo Legal",
@@ -114,7 +128,8 @@
     "De modo similar, armazene o arquivo pdf em",
 
     "Make sure that the file exists and that it is readable by the apache user":
-    "Assegure-se que este arquivo exista e que possa ser lido pelo usuário do apache",
+    "Assegure-se que este arquivo exista e que possa ser lido pelo usuário do
+apache",
 
     "Maximum file size in megabytes for the text file":
     "Tamanho máximo do arquivo texto em megabytes",
@@ -152,22 +167,35 @@
     "Ok":
     "Ok",
 
-    "On the contrary, if it is a returning user, who already accepted the disclaimer and there is an expiration time for old cookies, then the age of the AGChecked cookie will be determined by getting the AGLastVisit cookie; if it is higher than the expiration date for old cookies, then it will be invalidated":
-    "Ao contrário, se é um usuário que já visitou o site, aceitou os termos e existe uma data de expiração apra cookies antigos, a idade de AGChecked será calculada obtendo o cookie AGLastVisit; se este é maior que a data de expiração para cookies antigos então será invalidada",
+    "On the contrary, if it is a returning user, who already accepted the
+disclaimer and there is an expiration time for old cookies, then the age of the
+AGChecked cookie will be determined by getting the AGLastVisit cookie; if it is
+higher than the expiration date for old cookies, then it will be invalidated":
+    "Ao contrário, se é um usuário que já visitou o site, aceitou os termos e
+existe uma data de expiração apra cookies antigos, a idade de AGChecked será
+calculada obtendo o cookie AGLastVisit; se este é maior que a data de expiração
+para cookies antigos então será invalidada",
 
-    "On the \"Selected\" column you can choose the agreement type to be used by your OwnCloud":
+    "On the \"Selected\" column you can choose the agreement type to be used by
+your OwnCloud":
     "",
 
-    "Please also note that there is a hard coded limit of: %s Megabytes; this limit was set in order to prevent setting higher values that will make ownCloud to crash":
-    "Por gentileza, note que existe um limite máximo de: %s Megabytes; este valor foi atribuído para evitar que valores maiores causem problemas no ownCloud ",
+    "Please also note that there is a hard coded limit of: %s Megabytes; this
+limit was set in order to prevent setting higher values that will make ownCloud
+to crash":
+    "Por gentileza, note que existe um limite máximo de: %s Megabytes; este
+valor foi atribuído para evitar que valores maiores causem problemas no ownCloud
+",
 
     "Please contact the webmaster":
     "Por gentileza, contacte o webmaster",
 
-    "Please make sure that the placeholders: \"@s1\" and \"@s2\" are present in the \"Agreement text\"":
+    "Please make sure that the placeholders: \"@s1\" and \"@s2\" are present in
+the \"Agreement text\"":
     "",
 
-    "Please note that the placeholders: @s1 and @s2 are necessary to indicate where the text link on the login page begins and ends respectively":
+    "Please note that the placeholders: @s1 and @s2 are necessary to indicate
+where the text link on the login page begins and ends respectively":
     "",
 
     "Please read and agree the disclaimer before proceeding":
@@ -194,7 +222,8 @@
     "Text that will appear on the login dialog":
     "",
 
-    "The default agreements: \"Disclaimer of liability\", \"Legal disclaimer\", and \"General Terms and conditions\" can't be deleted":
+    "The default agreements: \"Disclaimer of liability\", \"Legal disclaimer\",
+and \"General Terms and conditions\" can't be deleted":
     "",
 
     "The fields: \"Name\" and \"Agreement text\" are obligatory":
@@ -203,20 +232,27 @@
     "The placeholder: \"@s1\" must be before \"@s2\"":
     "",
 
-    "The placeholders: \"@s1\" and \"@s2\" can only appear once on the \"Agreement text\"":
+    "The placeholders: \"@s1\" and \"@s2\" can only appear once on the
+\"Agreement text\"":
     "",
 
-    "The texts of the columns: \"Name\", \"Menu entry\", and \"Agreement text\" must be given in English, then you need to add the respective translations to files under the \"l10n\" folder":
+    "The texts of the columns: \"Name\", \"Menu entry\", and \"Agreement text\"
+must be given in English, then you need to add the respective translations to
+files under the \"l10n\" folder":
     "",
 
-    "The value of the AGChecked will be set the first time that the user visits the website or when it has been expired":
-    "O valor de AGChecked será atribuído na primeira vez que o usuário visita o website ou quando estiver expirado",
+    "The value of the AGChecked will be set the first time that the user visits
+the website or when it has been expired":
+    "O valor de AGChecked será atribuído na primeira vez que o usuário visita o
+website ou quando estiver expirado",
 
     "This is the name of your own agreement":
     "",
 
-    "This must be set in order to prevent the download of big text files, which may block the login page":
-    "Este valor deve ser atribuído para previnir o download de grande arquivos de texto, o que pode bloquear a página de login",
+    "This must be set in order to prevent the download of big text files, which
+may block the login page":
+    "Este valor deve ser atribuído para previnir o download de grande arquivos
+de texto, o que pode bloquear a página de login",
 
     "To enable more languages, put your text files here":
     "Para ativar mais idiomas, indique os arquivos textos aqui",
